update: dowload page audio visualizer done

--- a/Proyecto2024_collabo/package.json
+++ b/Proyecto2024_collabo/package.json
@@ -22,7 +22,9 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^5.13.0",
+		"audiomotion-analyzer": "^4.5.0",
 		"cloudinary": "^2.2.0",
-		"prisma": "^5.13.0"
+		"prisma": "^5.13.0",
+		"wavesurfer.js": "^7.7.15"
 	}
 }
