--- a/Proyecto2024_collabo/package.json
+++ b/Proyecto2024_collabo/package.json
@@ -25,6 +25,8 @@
 		"audiomotion-analyzer": "^4.5.0",
 		"busboy": "^1.6.0",
 		"cloudinary": "^2.2.0",
+		"express": "^4.19.2",
+		"multer": "^1.4.5-lts.1",
 		"prisma": "^5.13.0",
 		"wavesurfer.js": "^7.7.15"
 	}
