--- a/Proyecto2024_collabo/package.json
+++ b/Proyecto2024_collabo/package.json
@@ -25,6 +25,7 @@
 		"audiomotion-analyzer": "^4.5.0",
 		"busboy": "^1.6.0",
 		"cloudinary": "^2.2.0",
+		"cors": "^2.8.5",
 		"express": "^4.19.2",
 		"i": "^0.3.7",
 		"multer": "^1.4.5-lts.1",
