--- a/Proyecto2024_collabo/package.json
+++ b/Proyecto2024_collabo/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"prisma": "^5.16.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
@@ -21,15 +22,18 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^5.13.0",
+		"@prisma/client": "^5.16.1",
 		"audiomotion-analyzer": "^4.5.0",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.20.2",
 		"busboy": "^1.6.0",
 		"cloudinary": "^2.2.0",
 		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"express-openid-connect": "^2.17.1",
 		"i": "^0.3.7",
 		"multer": "^1.4.5-lts.1",
-		"prisma": "^5.13.0",
 		"wavesurfer.js": "^7.7.15"
 	}
 }
