--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.19.2",
+    "express-openid-connect": "^2.17.1"
+  }
 }
