--- a/Proyecto2024_collabo/package.json
+++ b/Proyecto2024_collabo/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@prisma/client": "^5.16.1",
 		"audiomotion-analyzer": "^4.5.0",
+		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"busboy": "^1.6.0",
