--- a/Proyecto2024_collabo/package.json
+++ b/Proyecto2024_collabo/package.json
@@ -34,6 +34,7 @@
 		"express": "^4.19.2",
 		"express-openid-connect": "^2.17.1",
 		"i": "^0.3.7",
+		"jsonwebtoken": "^9.0.2",
 		"multer": "^1.4.5-lts.1",
 		"wavesurfer.js": "^7.7.15"
 	}
