--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
-    "express-openid-connect": "^2.17.1"
+    "express-openid-connect": "^2.17.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
